<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MeByMe</string>
    <string name="app_company" translatable="false">Prosper Day</string>
    <string name="app_goal">Personal Empowerment</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_basic">Basic</string>
    <string name="app_admob_id" translatable="false"> ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_admob_interstitial_id" translatable="false"> ca-app-pub-3940256099942544/1033173712</string>
    <string name="content_description" translatable="false">Content description</string>
    <string name="label_advice_ignore_greater_close">You ignore more question than close it. It is a good ides to review!</string>
    <string name="label_advice_new_equal_100">You must to answer the questions: 100% without answer is not good!</string>
    <string name="label_without_advice">No advice available!</string>
    <string name="sharedPreferencesLogin" translatable="false">Login</string>
    <string name="label_screen_number_test_01" translatable="false">10.000</string>
    <string name="label_screen_number_test_03" translatable="false">1000</string>
    <string name="label_screen_test_name" translatable="false">Rosemeire Deconti</string>
    <string name="label_screen_test_question" translatable="false">This is a text to the application question</string>
    <string name="label_screen_test_answer" translatable="false">This is a text to the application answer</string>
    <string name="label_screen_date_test_01" translatable="false">30/10/2019</string>
    <string name="label_screen_string_test_01" translatable="false">This is a field to texts</string>
    <string name="label_text_not_found" translatable="false">NOT FOUND</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_old_email">Enter your old email</string>
    <string name="hint_new_email">Enter your new email</string>
    <string name="hint_password">Enter your password code</string>
    <string name="hint_old_password">Enter your old password</string>
    <string name="hint_new_password">Enter your new password</string>
    <string name="message_process_done">Process done</string>
    <string name="message_wait_by_processing">Wait by processing</string>
    <string name="message_data_not_exist">Data does not exist</string>
    <string name="message_unexpected_value" translatable="false">Unexpected value found. Class name:</string>
    <string name="message_NetworkNotAvailableLogin">"Network is not available, but, you can check recipes in local lists! Try network lists again later!"</string>
    <string name="message_maintain_created">Creation done with success!</string>
    <string name="message_maintain_updated">Update done with success!</string>
    <string name="message_maintain_deleted">Deletion done with success</string>
    <string name="message_maintain_sharing">Sharing done with success!</string>
    <string name="message_recognize_speech_error_device">Your device not support recognize speech</string>
    <string name="message_text_to_speech_language_error">Language not supported</string>
    <string name="message_application_create_data">We are creating application data to this phase! Wait a moment!</string>
    <string name="message_application_problem">"We have a problem and we are working to resolve it!";</string>
    <string name="message_application_word">MeByMe to be better</string>
    <string name="message_confirm_logout">Do you want to exit application?</string>
    <string name="message_confirm_reset">Do you want to initialize all data application?</string>
    <string name="message_confirm_initialize">Can we initialize your application? It is necessary to have network available</string>
    <string name="message_error_date_time">Error date/time:</string>
    <string name="message_error_activity">Error activity:</string>
    <string name="message_error_code">Error code:</string>
    <string name="message_error_details">Error details:</string>
    <string name="message_error_cause">Error cause:</string>
    <string name="message_error_class">Error class:</string>
    <string name="message_error_message">Error message:</string>
    <string name="message_password_short">Password with minimum 6 characters</string>
    <string name="message_user_reset_success">Reset password was done! Email was sent with instructions!</string>
    <string name="message_user_reset_failed">Reset password NOT done! Please, contact us!</string>
    <string name="message_user_signIn_success">Account created!</string>
    <string name="message_user_signIn_failed">SignIn NOT done! Please, contact us!</string>
    <string name="message_user_logIn_failed">LogIn NOT done! Please, contact us!</string>
    <string name="message_user_logout_success">logout was done!</string>
    <string name="message_user_signOut_success">SignOut was done!</string>
    <string name="message_user_signOut_failed">SignOut NOT done! Please, contact us!</string>
    <string name="message_user_changeEmail_success">Email changed!</string>
    <string name="message_user_changeEmail_failed">Email NOT changed! Please, contact us!</string>
    <string name="message_user_changeEmail_different">Emails must be different!</string>
    <string name="message_user_changeEmail_old_empty">Enter your old email!</string>
    <string name="message_user_changeEmail_new_empty">Enter your new email!</string>
    <string name="message_user_changePassword_success">Password changed!</string>
    <string name="message_user_changePassword_failed">Password NOT changed! Please, contact us!</string>
    <string name="message_user_changePassword_different">Passwords must be different!</string>
    <string name="message_user_changePassword_old_empty">Enter your old password!</string>
    <string name="message_user_changePassword_new_empty">Enter your new password!</string>
    <string name="message_userEmail">Enter your email address</string>
    <string name="message_user_password">Enter your password code</string>
    <string name="message_user_please_login">Please LogIn!</string>
    <string name="message_network_not_available">Network is not available. Please try again later!</string>
    <string name="message_maintain_displayed">Display done with success</string>
    <string name="label_report">Report</string>
    <string name="label_motivation">Motivation</string>
    <string name="label_save_login">Save login data</string>
    <string name="label_evolution">Evolution</string>
    <string name="label_analysis">Analysis</string>
    <string name="label_advice">Advice</string>
    <string name="label_diary">Diary</string>
    <string name="label_challenge">Challenge</string>
    <string name="label_book">Book</string>
    <string name="label_costs">Costs</string>
    <string name="label_overview">Overview</string>
    <string name="label_points">Points</string>
    <string name="label_number_photos">Photos</string>
    <string name="label_number_actions">Actions</string>
    <string name="label_number_sharing">Sharing</string>
    <string name="label_user">User</string>
    <string name="label_sharing">Sharing</string>
    <string name="label_needs">Needs</string>
    <string name="label_question">Question</string>
    <string name="label_answer">Answer</string>
    <string name="label_reset">Reset</string>
    <string name="label_sync">Sync</string>
    <string name="label_help">Help</string>
    <string name="label_error" translatable="false">MeByMe Error</string>
    <string name="label_company">Company</string>
    <string name="label_phases">Phases</string>
    <string name="label_tools">Tools</string>
    <string name="label_utilities">Utilities</string>
    <string name="label_grade">Grade</string>
    <string name="label_share">Share</string>
    <string name="label_total">Total</string>
    <string name="label_number">Number</string>
    <string name="label_length">Length</string>
    <string name="label_experience">Experience</string>
    <string name="label_name">Name</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_complete_name">Complete name</string>
    <string name="label_nickname">NickName</string>
    <string name="label_language">Language</string>
    <string name="label_password_info">Password change (last/next)</string>
    <string name="label_sync_info">Synchronization (last/next)</string>
    <string name="label_reset_info">Reset (last)</string>
    <string name="label_type_your_data_here">Type your data here …</string>
    <string name="label_unacquainted">Unacquainted</string>
    <string name="label_list_all">List all</string>
    <string name="label_list_new">List new</string>
    <string name="label_list_pending">List pending</string>
    <string name="label_list_closed">List closed</string>
    <string name="label_list_ignored">List ignored</string>
    <string name="label_list_delayed">List delayed</string>
    <string name="label_list_postponed">List postponed</string>
    <string name="label_configurations">Configurations</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_mission">Mission</string>
    <string name="label_terms">Terms</string>
    <string name="label_policy">Policy</string>
    <string name="label_application">Application</string>
    <string name="label_contact">Contact us</string>
    <string name="label_credits">Credits</string>
    <string name="label_donations">Donations</string>
    <string name="label_evaluation">Evaluation</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_change_email">Change email</string>
    <string name="label_logout">Logout</string>
    <string name="label_signout">Signout</string>
    <string name="label_mood">Mood</string>
    <string name="label_autobiography">Autobiography</string>
    <string name="label_recognition">Recognition</string>
    <string name="label_values">Values</string>
    <string name="label_belief">Belief</string>
    <string name="label_personality">Personality</string>
    <string name="label_life">Life</string>
    <string name="label_actions">Actions</string>
    <string name="label_reflection">Reflection</string>
    <string name="label_biorhythm">Biorhythm</string>
    <string name="label_status">Situação</string>
    <string name="label_status_new">Nova</string>
    <string name="label_experience_good">Good</string>
    <string name="label_updated">Updated</string>
    <string name="label_photos">Photo</string>
    <string name="settings_language_key" translatable="false">language</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_language_value_english" translatable="false">English</string>
    <string name="settings_theme_key" translatable="false">theme</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_theme_value_default" translatable="false">default</string>
    <string name="label_option_letter_A" translatable="false">(A)</string>
    <string name="label_option_letter_B" translatable="false">(B)</string>
    <string name="label_option_letter_C" translatable="false">(C)</string>
    <string name="label_option_letter_D" translatable="false">(D)</string>
    <string name="label_option_number_0" translatable="false">(0)</string>
    <string name="label_option_number_1" translatable="false">(1)</string>
    <string name="label_option_number_2" translatable="false">(2)</string>
    <string name="label_option_number_3" translatable="false">(3)</string>
    <string name="label_option_number_4" translatable="false">(4)</string>
    <string name="label_option_number_5" translatable="false">(5)</string>
</resources>