<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/label_phases">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/item_autobiography"
                    android:icon="@drawable/main_icon_autobiography_black_24dp"
                    android:title="@string/label_autobiography" />

                <item
                    android:id="@+id/item_personality"
                    android:icon="@drawable/main_icon_personality_black_24dp"
                    android:title="@string/label_personality" />

                <item
                    android:id="@+id/item_recognition"
                    android:icon="@drawable/main_icon_recognition_black_24dp"
                    android:title="@string/label_recognition" />

                <item
                    android:id="@+id/item_reflection"
                    android:icon="@drawable/main_icon_reflection_black_24dp"
                    android:title="@string/label_reflection" />

                <item
                    android:id="@+id/item_life"
                    android:icon="@drawable/main_icon_life_black_24dp"
                    android:title="@string/label_life" />

                <item
                    android:id="@+id/item_action"
                    android:icon="@drawable/main_icon_action_black_24dp"
                    android:title="@string/label_actions" />

            </group>
        </menu>
    </item>

    <item android:title="@string/label_tools">

        <menu>

            <item
                android:id="@+id/item_mood"
                android:icon="@drawable/main_icon_mood_black_24dp"
                android:title="@string/label_mood" />

            <item
                android:id="@+id/item_diary"
                android:icon="@drawable/main_icon_diary_black_24dp"
                android:title="@string/label_diary" />

            <item
                android:id="@+id/item_biorhythm"
                android:icon="@drawable/main_icon_biorhythm_black_24dp"
                android:title="@string/label_biorhythm" />

            <item
                android:id="@+id/item_challenge"
                android:icon="@drawable/main_icon_challenge_black_24dp"
                android:title="@string/label_challenge" />

            <item
                android:id="@+id/item_belief"
                android:icon="@drawable/main_icon_belief_black_24dp"
                android:title="@string/label_belief" />

        </menu>

    </item>

    <item android:title="@string/label_utilities">

        <menu>

            <item
                android:id="@+id/item_user"
                android:icon="@drawable/main_icon_user_black_24dp"
                android:title="@string/label_user" />

            <item
                android:id="@+id/item_photo"
                android:icon="@drawable/main_icon_photo_black_24dp"
                android:title="@string/label_photos" />

            <item
                android:id="@+id/item_sharing"
                android:icon="@drawable/button_icon_share_black_24dp"
                android:title="@string/label_sharing" />

            <item
                android:id="@+id/item_book"
                android:icon="@drawable/main_icon_book_black_24dp"
                android:title="@string/label_book" />

        </menu>

    </item>

</menu>
