<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    style="@style/linearLayoutHorizontalMatchWrap">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/content_description"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        style="@style/imageViewIconNavigation" />

    <LinearLayout style="@style/linearLayoutVerticalMatchWrapCenter">

        <TextView
            android:id="@+id/textViewAppName"
            style="@style/textViewAppNameSmall"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textViewAppGoal"
            style="@style/textViewAppGoalBig"
            android:text="@string/app_goal" />

    </LinearLayout>

</LinearLayout>
